--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,19 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "cocktails";
+
+$fontcolor: #526981;
+body{
+  background-color: #f5f5f5;
+  color: white;
+}
+
+
+a{
+  color: #526981;
+  &:hover{
+    color: black;
+    text-decoration: none;
+  }
+}
