fonts and images updated

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,9 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: #F5F5F5;
+  a{
+    font-size: 20px;
+  }
 }
 
 .navbar-lewagon .navbar-collapse {
