--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,17 +13,31 @@
 @import "pages/index";
 @import "cocktails";
 
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap');
+
 $fontcolor: #526981;
 body{
-  background-color: #f5f5f5;
+  background-image: url("background.jpg") ;
+  background-repeat: repeat;
+  background-size: cover;
   color: white;
 }
 
+h1, h2, h3, h4 {
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+}
+
+p{
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+}
 
 a{
   color: #526981;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   &:hover{
     color: black;
     text-decoration: none;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
   }
 }
