--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -4,9 +4,11 @@
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.6);
   h1{
     color: white;
+    font-size: 50px;
   }
   p{
     color: white;
+    font-size: 30px;
   }
 }
 
