--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-  border-radius: 0rem 2rem 0rem 2rem;
+  border-radius: 1rem;
   color: white;
   align-content: center;
   h3{
@@ -14,6 +14,9 @@
   }
   a{
     color: white;
+    &:hover{
+      color: white;
+    }
   }
   &:hover{
     transform: translateX(-0.5rem);
@@ -26,9 +29,29 @@
   height: 19rem;
   object-fit: cover;
   position: absolute;
-  border-radius: 0rem 2rem 0rem 2rem;
+  border-radius: 1rem;
   z-index: -1;
   box-shadow: 10px -5px 23px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 10px -5px 23px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px -5px 23px 0px rgba(0,0,0,0.75);
+}
+
+
+.card-cocktail{
+  width: 10rem;
+  height: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 1.5rem;
+  align-content: center;
+  background-color: black;
+  background-image: url('shot.jpg');
+  background-size: cover;
+  background-position: -30px 0px;
+  opacity: 0.8;
+  p{
+    font-size: 25px;
+  }
+
 }
