--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,3 +1,25 @@
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <%= link_to "#", class: "navbar-brand" do %>
+    <%= image_tag "logo.png" %>
+  <% end %>
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item mr-3 ml-3">
+        <%= link_to "Home", :cocktails%>
+      </li>
+      <li class="nav-item mr-3 ml-3">
+        <%= link_to "Create a Cocktail", :new_cocktail %>
+      </li>
+    </ul>
+  </div>
+</div>
+
 <div class="container">
   <h1>New dose</h1>
   <%= render 'doses/form' %>
