--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -5,3 +5,11 @@
   color: white;
   background-color: black;
 }
+
+@media (min-width: 100px) and (max-width: 568px ){
+  #title{
+    h1{
+      font-size: 20px;
+    }
+  }
+}
