--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to "#", class: "navbar-brand" do %>
+  <%= link_to :cocktails, class: "navbar-brand" do %>
     <%= image_tag "logo.png" %>
   <% end %>
 
@@ -20,7 +20,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container mt-4">
 <h1>Create your new cocktail</h1>
  <%= render 'cocktails/form' %>
 </div>
