--- a/app/views/doses/_form.html.erb
+++ b/app/views/doses/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for [@cocktail, @dose] do |f|%>
   <%= f.input :description, placeholder: 'what\'s the dose ejem: 2 shots' %>
   <%= f.input :ingredient_id, collection: Ingredient.all.each { |ingredient| ingredient.id} %>
-  <%= f.submit class: 'btn btn-primary' %>
+  <%= f.submit class: 'btn btn-ghost w-100' %>
 <% end %>
