--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -34,10 +34,10 @@
   <h1>Your Cocktails!</h1>
 </div>
 
-<div class="container-fluid d-flex justify-content-around p-0 mt-4 mb-4" id="card-ema-container">
-  <% @cocktails.first(5).each do |cocktail|%>
+<div class="container-fluid d-flex flex-wrap justify-content-around p-0 mt-4 mb-4" id="card-ema-container">
+  <% @cocktails.each do |cocktail|%>
   <% cocktail_img = %w[fire.jpg darkcocktail.jpg cocktail3.jpg cocktail4.jpg cocktail5.jpg] %>
-  <div class="card-ema mr-2 ml-2">
+  <div class="card-ema mr-2 ml-2 mt-4">
     <% if cocktail.photo.attached? %>
         <%= cl_image_tag cocktail.photo.key, class:'card-ema-img'%>
       <% else  %>
@@ -54,14 +54,20 @@
   <h1>Popular cocktails!</h1>
 </div>
 
-<div class="container-fluid d-flex justify-content-around p-0 mt-4 mb-4" id="card-ema-container">
+<div class="container-fluid d-flex flex-wrap justify-content-around p-0 mt-4 mb-4" id="card-ema-container">
   <% @cocktails.sample(5).each do |cocktail|%>
-  <% cocktail_img = %w[darkcocktail.jpg fire.jpg cocktail3.jpg cocktail4.jpg cocktail5.jpg] %>
-  <div class="card-ema mr-2 ml-2">
-    <%= image_tag  cocktail_img.sample, class: 'card-ema-img' %>
+  <% cocktail_img = %w[fire.jpg darkcocktail.jpg cocktail3.jpg cocktail4.jpg cocktail5.jpg] %>
+  <div class="card-ema mr-2 ml-2 mt-4">
+    <% if cocktail.photo.attached? %>
+        <%= cl_image_tag cocktail.photo.key, class:'card-ema-img'%>
+      <% else  %>
+        <%= image_tag File.exist?("app/assets/images/#{cocktail.name.delete(' ')}.jpg") ? "#{cocktail.name.delete(' ')}.jpg" : cocktail_img.sample , class: 'card-ema-img' %>
+    <% end %>
     <%= link_to cocktail_path(cocktail.id) do %>
       <h3><%= cocktail.name %></h3>
     <% end %>
   </div>
   <% end %>
 </div>
+
+<!--Sliders-->
