--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -19,3 +19,28 @@
   height: 500px;
   z-index: -1;
 }
+
+
+.banner-show{
+  width: 100%;
+  height: 750px;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.6);
+  h1{
+    color: white;
+    font-size: 50px;
+  }
+  p{
+    color: white;
+    font-size: 30px;
+  }
+}
+
+.banner-show-img{
+  object-fit: fill;
+  position: absolute;
+  width: 100%;
+  height: 750px;
+  z-index: -1;
+  padding: 0px;
+  margin: 0px;
+}
