navbar distance fixed forms fixed

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -20,6 +20,8 @@
     </ul>
   </div>
 </div>
+
+<div class="clear-fix"></div>
 <!-- Banner -->
 <div class="banner-container d-flex">
   <%= image_tag "bar.jpg", class:"banner-img" %>
