--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -20,7 +20,11 @@
   </div>
 </div>
 
-<div class="container mt-4">
+<div class="clear-fix">
+
+</div>
+
+<div class="container p-5">
 <h1>Create your new cocktail</h1>
  <%= render 'cocktails/form' %>
 </div>
