--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -20,7 +20,9 @@
   </div>
 </div>
 
-<div class="container mt-4">
+<div class="clear-fix"></div>
+
+<div class="container">
   <h1>New dose</h1>
   <%= render 'doses/form' %>
 </div>
